:sparkles: Add /services/:service route
:memo: Add documentation for the route
:rotating_light: Format doc comments
